add make tasks